<resources>
    <string name="app_name">Top Movies</string>
 <!--   <string name="action_refresh">REFRESH</string> -->
    <string name="sort_by_popularity">Sort by popularity</string>

    <string name="sort_by_top_rated">Sort by top rated</string>

    <string name="favorite_movies">Favourites</string>
    <string name="about_me">About</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_content">Veronika Jauckus built the "Top Movies" app as a Free app.\n\nThis SERVICE is provided by Veronika Jauckus at no cost and is intended for use as is.\n\nThe app use data of Themoviedb.org, to show popular movies.</string>
    <string name="link_text_to_moviedb">https://www.themoviedb.org</string>
    <string name="email_to_me">info@art-webwork.de</string>
    <string name="data_collection">The app does not collect or log any information about users.\n\nIf you have any questions, comments or complaints about this Privacy Policy, please contact me:</string>

    <string name="favourite_activity_label">Favourites Collection</string>
    <string name="details_activity_label">Movie Details</string>

    <string name="error_title">Network connection error</string>

    <string name="content_image">poster_of_current_movie</string>
    <string name="error_message">Please check your network connection and try again.</string>

    <string name="remove_from_favourite">Remove from favourite</string>
    <string name="add_to_favourite">add to favourite</string>
    <string name="see_favourites">see favourites</string>
  <!--  <string name="favourites_not_here_label">FAVOURITES</string> -->
    <string name="favourites_not_here">There are no favourites available</string>

    <string name="trailer_label">Trailers</string>
    <string name="trailer_1">Trailer 1</string>
    <string name="trailer_item_label">Trailer</string>
    <string name="trailer_loading_error">Loading of trailers does not work proper. PLease try again</string>
    <string name="sharing_error">Sharing is not possible.</string>
    <string name="play_icon_image">play icon</string>

    <string name="review_label">Reviews</string>
    <string name="review_author_dummy">Review of unknown author</string>
    <string name="reviews_not_available">There are no reviews available</string>
    <string name="action_share">SHARE</string>
    <string name="my_movie_tip">Let me recommend you this movie: </string>
    <string name="playing_video_error">Playing video is not possible</string>
    <string name="remove_as_favourite_success">Super. The movie is not your favourite anymore</string>
    <string name="remove_as_favourite_error">The remove of movie from favourite database is not successfully</string>
    <string name="insert_as_favourite_success">Super. The movie is now your favourite</string>
    <string name="insert_as_favourite_error">The insert of movie into favourite database is not successfully</string>
</resources>
