<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
tools:context=".activities.MainActivity">

 <item
     android:id="@+id/sort_by_top_rated"
     android:orderInCategory="1"
     android:title="@string/sort_by_top_rated"
     app:showAsAction="never"/>
<item
    android:id="@+id/sort_by_popularity"
    android:orderInCategory="2"
    android:title="@string/sort_by_popularity"
    app:showAsAction="never"/>
 <item
     android:id="@+id/show_favorites"
     android:orderInCategory="3"
     android:title="@string/favorite_movies"
     app:showAsAction="never" />
 <item
     android:id="@+id/show_about"
     android:orderInCategory="4"
     android:title="@string/about_me"
     app:showAsAction="never" />


</menu>